@@ -156,7 +156,7 @@
 				<xs:element ref="suggestion" minOccurs="0" maxOccurs="15" />
 				<xs:element ref="url" minOccurs="0" maxOccurs="1" />
 				<xs:element ref="short" minOccurs="0" />
-				<xs:element ref="example" minOccurs="2" maxOccurs="unbounded" />
+				<xs:element ref="example" minOccurs="1" maxOccurs="unbounded" />
 			</xs:sequence>
 			<xs:attribute name="default" use="optional">
 				<xs:simpleType>
