@@ -17622,6 +17622,7 @@ $Id$
                 <short>Dubte: 'Tan' davant d'adjectiu o 'tant' davant de nom</short>
                 <example type="incorrect"><marker>tant</marker> emprenedor.</example>
                 <example type="incorrect"><marker>tan</marker> emprenedors.</example>
+                <example type="correct"><marker>TODO</marker></example>
             </rule>
             <rule>
                 <pattern>
@@ -17637,6 +17638,7 @@ $Id$
                 <short>Dubte: 'Poc/molt' davant d'adjectiu o 'pocs/molts' davant de nom</short>
                 <example type="incorrect"><marker>molt</marker> emprenedors.</example>
                 <example type="incorrect"><marker>poc</marker> emprenedors.</example>
+                <example type="correct"><marker>TODO</marker></example>
             </rule>
             <rule>
                 <pattern>
@@ -17746,6 +17748,7 @@ $Id$
             <short>Error ortogràfic</short>
             <example type="incorrect"><marker>mes</marker></example>
             <example type="incorrect"><marker>més</marker></example>
+            <example type="correct"><marker>TODO</marker></example>
         </rule>
         <rule id="DONAb" name="Revisa totes les aparicions de «dona/dóna/dones/dónes»">
             <pattern>
@@ -17755,6 +17758,7 @@ $Id$
             <short>Error ortogràfic</short>
             <example type="incorrect"><marker>Dona</marker>.</example>
             <example type="incorrect"><marker>Dóna</marker>.</example>
+            <example type="correct"><marker>TODO</marker></example>
         </rule>
         <rule id="TOTS_ELS_DIACRITICS" name="Revisa tots els mots amb diacrítics">
             <pattern>
@@ -17764,6 +17768,7 @@ $Id$
             <short>Revisa si porta accent o no</short>
             <example type="incorrect"><marker>Dona</marker>.</example>
             <example type="incorrect"><marker>Dóna</marker>.</example>
+            <example type="correct"><marker>TODO</marker></example>
         </rule>
         <rulegroup id="determinant_nom_estricte" name="Revisa concordança determinant+nom estrictament">
             <rule>
@@ -21686,6 +21691,7 @@ $Id$
                 <suggestion>devers</suggestion>
                 <example type="incorrect"><marker>a això de</marker> migdia</example>
                 <example type="incorrect"><marker>a això de</marker>l migdia</example>
+                <example type="correct"><marker>TODO</marker></example>
             </rule>
             <rule>
                 <pattern>   
@@ -21703,6 +21709,7 @@ $Id$
                 <suggestion>devers</suggestion>
                 <example type="incorrect"><marker>a això de</marker> les deu</example>
                 <example type="incorrect"><marker>a això de</marker> la una</example>
+                <example type="correct"><marker>TODO</marker></example>
             </rule>
         </rulegroup>    
         <rule id="AMB_TAL_QUE" name="amb tal que">
