@@ -11667,7 +11667,6 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
             </pattern>
             <message>In der Wendung '(einer Sache) Folge leisten' wird <suggestion><match no="2" case_conversion="startupper"/></suggestion> großgeschrieben.</message>
             <example type="incorrect" correction="Folge">Ich leiste der Anweisung <marker>folge</marker>.</example>
-            <example type="correct">Ich leiste der Anweisung <marker>Folge</marker>.</example>
         </rule>
         <rulegroup id="DU_DICH" name="Du dich (Du Dich, du dich)">
             <rule>
