@@ -19,6 +19,12 @@ LanguageTool Change Log
 -API:
     -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.
 
+-Rule syntax:
+    -A rule may now have a single example sentence as long as it has a 'correction'
+     attribute - this can save some redundancy if the only correct sentence is the
+     same as the incorrect sentence with the correction applied. Before, a rule
+     needed at least two example sentences.
+
 -Internal:
     -We have switched from Apache Tika to language-detector
      (https://github.com/optimaize/language-detector) for automatically
